flask/text-encryptor/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-encryptor
  namespace: encryptor
spec:
  selector:
    matchLabels:
      app: text-encryptor
  replicas: 1
  template:
    metadata:
      labels:
        app: text-encryptor
    spec:
      restartPolicy: Always
      containers:
      - name: main
        image: jianshao/text-encryptor:0.0.4
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
        volumeMounts:
          - mountPath: /www/static
            name: image-volume
      volumes:
      - name: image-volume
        configMap:
          name: image-cm
---
apiVersion: v1
kind: Service
metadata:
  name: text-encryptor
  labels:
    app: text-encryptor
  namespace: encryptor
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: text-encryptor
